# monitor

./: .gitignore  .gitmodules  1st_boot_wo_monitor.md  CMakeLists.txt  README.md  build.sh  enable_TNN_on_rasberry_pi.md  enable_TNN_on_reaberry_pi.md
cmake/: third_party.cmake  watchdog.cmake
docs/: 1st_boot_wo_monitor_keyboard.md
watchdog/: main.cc  motor.cc  motor.h  object_detector.cc  object_detector.h  watch_dog.cc  watch_dog.h
